--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN" xmlns="http://www.w3.org/1999/html">
+<html lang="zh-CN">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -63,7 +63,7 @@
                     <div class="imgPreview">
                         <img id="imgpreview">
                     </div>
-                    <!--产生后-->
+                    <!--产生后，data:image/png;base64 以base64编码，保存文件-->
                     <img id="generate" src="" alt="">
                 </div>
             </div>
