--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 
 
 
-
+    <img class = "img-bottom"　src = "img/bottom.jpg">
+    
 </div class="footer-div">
     <p class="footer">2017 © Powered by HUSTSU  All rights reserved.</p>
 </div>
