--- a/index.html
+++ b/index.html
@@ -14,12 +14,10 @@
 
     <link href="bootstrap/bootstrap.min.css" rel="stylesheet">
     <link href="css/my.css" rel="stylesheet">
-    <script src="bootstrap/bootstrap.min.js" type="text/javascript"></script>
 
     <link  href="cropperjs/cropper.min.css" rel="stylesheet">
     <script type="text/javascript" src="cropperjs/cropper.min.js"></script>
 
-    <script type="text/javascript" src="bootstrap/jquery-3.2.1.js"></script>
 
 </head>
 
@@ -48,31 +46,49 @@
             </div>
             <br><br><br>
             <!-- 预览区域　-->
-            <div class="row" style="visibility: hidden" id="preview">
-                <div class="col-xl-2 chooseimg">
-                    <label class="btn btn-r" for="inputImage" title="选择图片">
-                        <input type="file" id="inputImage" class="hidden" />
-                        <span>选择图片</span>
-                    </label>
-                    <br />
-                    <button type="button" id="generateImage" class="btn btn-r disabled">生成头像</button>
-                </div>
-
-                <div class="img-group">
-                    <!--产生前-->
-                    <div class="imgPreview">
-                        <img id="imgpreview">
+            <div class="" style="visibility: hidden" id="preview">
+                <div class="row">
+                    <div class="col-xl-2 chooseimg">
+                        <label class="btn btn-r" for="inputImage" title="选择图片">
+                            <input type="file" id="inputImage" class="hidden" accept=".jpg,.jpeg,.png,.gif,.bmp,.tiff"　/>
+                            <span>选择图片</span>
+                        </label>
+                        <br />
+                        <button type="button" id="generateImage" class="btn btn-r disabled">生成头像</button>
                     </div>
-                    <!--产生后，data:image/png;base64 以base64编码，保存文件-->
-                    <img id="generate" src="" alt="">
+
+                    <div class="img-group">
+                        <!--产生前-->
+                        <div class="imgPreview">
+                            <img id="imgpreview">
+                        </div>
+                        <!--产生后，data:image/png;base64 以base64编码，保存文件-->
+                        <img id="generate" src="" alt="">
+
+                        <div class="row">
+                            <div class="container-test">
+                                <div>
+                                    <img id="image-upload" src="img/model00.png" alt="Picture">
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
                 </div>
             </div>
-</div>
+
+
+
+
+
+
 </div class="footer-div">
     <p class="footer">2017 © Powered by HUSTSU  All rights reserved.</p>
 </div>
 
 <script src="js/my.js"></script>
+<script type="text/javascript" src="bootstrap/jquery-3.2.1.js"></script>
+<script src="bootstrap/bootstrap.min.js"></script>
 
 </body>
 </html>
