--- a/test-cropper.html
+++ b/test-cropper.html
@@ -1,16 +1,183 @@
-<!DOCTYPE html>
-<html lang="zh-CN">
+﻿
+<!DOCTYPE HTML>
+<html style="padding-bottom: 54px;">
 <head>
-    <title>test-cropper</title>
-    <meta charset="UTF-8">
-    <script src="js/test-cropper.js"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="renderer" content="webkit">
+
+    <title>简单功能强大的jQuery图片剪裁插件Image Cropper</title>
+    <meta name="description" content="相信很多朋友都在大型的网站，如新浪微博、QQ微博上看到过头像裁图工具，感觉很高大尚吧，今天朋友们有福了，今天就来说一说一款这么高大尚的插件cropper，cropper是一款使用简单且功能强大的图片剪裁jQuery插件。该图片剪裁插件支持图片放大缩小，支持鼠标滚轮操作，支持图片旋转，支持触摸屏设备，支持canvas，并且支持跨浏览器使用。" />
+    <meta name="keywords" content="jQuery图片剪裁插件Image Cropper,图片剪裁,Image Cropper是什么，Image Cropper下载，Image Cropper使用方法，jquery,jquery插件" />
+    <link rel="Shortcut icon" href="http://www.jq22.com/favicon.ico" />
+    <link href="css/demo.css?v1" rel="stylesheet" media="all" />
+    <!--[if IE]>
+
+    <style type="text/css">
+        li.purchase a {
+            padding-top: 5px;
+            background-position: 0px -4px;
+        }
+
+        li.remove_frame a {
+            padding-top: 5px;
+            background-position: 0px -3px;
+        }
+    </style>
+
+    <![endif]-->
+    <script type="text/javascript">
+        var txt = "http://www.jq22.com/demo/cropper-master20160830/examples/crop-avatar";
+        window.g1 = txt.substr(0, 3);
+        window.g2 = txt.substr(0, 19);
+    </script>
+    <script src="js/pace.min.js" charset="gbk"></script>
+    <link href="css/pace-theme-barber-shop.css" rel="stylesheet" />
+    <script src="http://libs.baidu.com/jquery/1.7.0/jquery.min.js"></script>
+    <script src="js/jquery.qrcode.min.js"></script>
+    <script type="text/javascript">
+
+        var theme_list_open = false;
+
+        $(document).ready(function () {
+            function fixHeight() {
+                var headerHeight = $("#switcher").height();
+                $("#iframe").attr("height", $(window).height()-54+ "px");
+            }
+            $(window).resize(function () {
+                fixHeight();
+            }).resize();
+
+            $('.icon-monitor').addClass('active');
+
+            $(".icon-mobile-3").click(function () {
+                $("#by").css("overflow-y", "auto");
+                $('#iframe-wrap').removeClass().addClass('mobile-width-3');
+                $('.icon-tablet,.icon-mobile-1,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+                $(this).addClass('active');
+                return false;
+            });
+
+            $(".icon-mobile-2").click(function () {
+                $("#by").css("overflow-y", "auto");
+                $('#iframe-wrap').removeClass().addClass('mobile-width-2');
+                $('.icon-tablet,.icon-mobile-1,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+                $(this).addClass('active');
+                return false;
+            });
+
+            $(".icon-mobile-1").click(function () {
+                $("#by").css("overflow-y", "auto");
+                $('#iframe-wrap').removeClass().addClass('mobile-width');
+                $('.icon-tablet,.icon-mobile,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+                $(this).addClass('active');
+                return false;
+            });
+
+            $(".icon-tablet").click(function () {
+                $("#by").css("overflow-y", "auto");
+                $('#iframe-wrap').removeClass().addClass('tablet-width');
+                $('.icon-tablet,.icon-mobile-1,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+                $(this).addClass('active');
+                return false;
+            });
+
+            $(".icon-monitor").click(function () {
+                $("#by").css("overflow-y", "hidden");
+                $('#iframe-wrap').removeClass().addClass('full-width');
+                $('.icon-tablet,.icon-mobile-1,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+                $(this).addClass('active');
+                return false;
+            });
+        });
+    </script>
+    <script type="text/javascript">
+        function Responsive($a) {
+            if ($a == true) $("#Device").css("opacity", "100");
+            if ($a == false) $("#Device").css("opacity", "0");
+            $('#iframe-wrap').removeClass().addClass('full-width');
+            $('.icon-tablet,.icon-mobile-1,.icon-monitor,.icon-mobile-2,.icon-mobile-3').removeClass('active');
+            $(this).addClass('active');
+            return false;
+        };
+    </script>
 </head>
-<body>
+<body id="by" style="overflow-y: hidden" >
+<div id="switcher">
+    <div class="center">
+        <ul>
+            <div id="Device">
+                <li class="device-monitor"><a href="javascript:">
+                    <div class="icon-monitor">
+                    </div>
+                </a></li>
+                <li class="device-mobile"><a href="javascript:">
+                    <div class="icon-tablet">
+                    </div>
+                </a></li>
+                <li class="device-mobile"><a href="javascript:">
+                    <div class="icon-mobile-1">
+                    </div>
+                </a></li>
+                <li class="device-mobile-2"><a href="javascript:">
+                    <div class="icon-mobile-2">
+                    </div>
+                </a></li>
+                <li class="device-mobile-3"><a href="javascript:">
+                    <div class="icon-mobile-3">
+                    </div>
+                </a></li>
+            </div>
+            <li class="top2" id="sj"><a href="#">手机二维码预览</a><div class="vm" ><div id="output"></div><p style="color:#808080">扫一扫，直接在手机上打开</p></div></li>
+            <li class="logoTop" id="sj2"><a href="http://www.jq22.com/jquery-info9322">简单功能强大的jQuery图片剪裁插件Image Cropper</a></li>
 
-<div>
-    <img id="test" src="img/test-bg.jpg">
+            <script>
+                jQuery('#output').qrcode({width:150,height: 150,text: window.location.href});
+            </script>
+            <li class="remove_frame"><a href="http://www.jq22.com/demo/cropper-master20160830/examples/crop-avatar"  title="移除框架">
+            </a></li>
 
+        </ul>
+    </div>
 </div>
+<div id="iframe-wrap">
+    <iframe id="iframe" src="http://www.jq22.com/demo/cropper-master20160830/examples/crop-avatar" frameborder="0"  width="100%">
+    </iframe>
+</div>
+
+<div class="fdad">
+    <div class="fdl">Advertisement</div>
+    <div class="fdr">x</div>
+    <div class="fdadnr">
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <!-- 336x280 -->
+        <ins class="adsbygoogle"
+             style="display:inline-block;width:336px;height:280px"
+             data-ad-client="ca-pub-2935286260943234"
+             data-ad-slot="6063645905"></ins>
+        <script>
+            (adsbygoogle = window.adsbygoogle || []).push({});
+        </script>
+    </div>
+</div>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $(".fdr").click(function () {
+            $(".fdad").hide();
+        });
+    });
+</script>
+
+<script>
+    var _hmt = _hmt || [];
+    (function () {
+        var hm = document.createElement("script");
+        hm.src = "//hm.baidu.com/hm.js?b3a3fc356d0af38b811a0ef8d50716b8";
+        var s = document.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(hm, s);
+    })();
+</script>
 
 </body>
 </html>
