--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
             </div>
 
 
-
-
+			<div class="row">
+				<img src="img/foot.png" class="foot-img" alt="">
+			</div>
 
 
 </div class="footer-div">
-    <p class="footer">2017 © Powered by HUSTSU  All rights reserved.</p>
+    <p class="footer"><small>2017 © Powered by HUSTSU && 电信学院科协技术部  All rights reserved.</small></p>
 </div>
 
 <script src="js/my.js"></script>
