--- a/index.html
+++ b/index.html
@@ -62,16 +62,24 @@
                         <div class="imgPreview">
                             <img id="imgpreview">
                         </div>
-                        <!--产生后，data:image/png;base64 以base64编码，保存文件-->
-                        <img id="generate" src="" alt="">
 
-                        <div class="row">
-                            <div class="container-test">
-                                <div>
-                                    <img id="image-upload" src="img/model00.png" alt="Picture">
-                                </div>
-                            </div>
+                        <!--剪裁区-->
+                        <div class="container js-container">
+                            <img class="js-image" src="">
                         </div>
+
+                        <!--产生后，data:image/png;base64 以base64编码，保存文件-->
+                        <img id="generate" class="js-result"  src="" alt="">
+
+
+                        <!--<div class="row">-->
+                            <!--<div class="container-test">-->
+                                <!--<div>-->
+                                    <!--<img id="image-upload" src="img/model00.png" alt="Picture">-->
+                                <!--</div>-->
+                            <!--</div>-->
+                        <!--</div>-->
+
 
                     </div>
                 </div>
