--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
                 <div class="row">
                     <h5>生成头像</h5>
                     <!--产生后，data:image/png;base64 以base64编码，保存文件-->
-                    <div class="js-result"></div>
+                    <div class="js-result">
+
+                    </div>
                 </div>
 
             </div>
