--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="row header">
             <!-- the logo of hust -->
                 <div class="col-xl-8">
-                    <img id="img-head" src="img/logo.png"  alt="headerimg">
+                    <img id="img-head" src="img/header-logo.png"  alt="headerimg">
                 </div>
             </div>
 
