--- a/demo.html
+++ b/demo.html
@@ -34,7 +34,7 @@
 				<!-- choose 选择模板-->
 				<div class="row" >
 					<div class="header-box">
-						<img src="img/head.jpg" alt="">
+						<img src="img/header-logo.png" alt="">
 					</div>
 	                <div class="heading text-center ">
 	                    <h3 class="heading-title " >请选择你的模板</h3>
