移动端样式小调整

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="css/my.css" rel="stylesheet">
     <link  href="cropperjs/cropper.min.css" rel="stylesheet">
     <script type="text/javascript" src="cropperjs/cropper.min.js"></script>
-
+    <script type="text/javascript" src="js/my.js"></script>
 
 </head>
 
@@ -83,7 +83,7 @@
 			</div>
 
 
-</div class="footer-div">
+<div class="footer-div">
     <p class="footer">2017 © Powered by HUSTSU && 电信学院科协技术部  All rights reserved.</p>
 </div>
 
