--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 	<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous">
 	</script>
-	<link rel="stylesheet" href="css/cropper.min.css">
+	<link rel="stylesheet" href="cropperjs/cropper.min.css">
     <link rel="stylesheet" type="text/css" href="css/media.css">
 </head>
 <body>
@@ -29,15 +29,15 @@
 
 	<div class="container-fluid" >
 	    <!-- 头部模板展示 	 -->
-
-
+	    <div class="row">
+		    <div class="header-box">
+				<img class = "col-xs-6" src="img/header.jpg" alt="">
+			</div>
+		</div>
 				<!-- choose 选择模板-->
 				<div class="row" >
-					<div class="header-box">
-						<img src="img/header-logo.png" alt="">
-					</div>
 	                <div class="heading text-center ">
-	                    <h3 class="heading-title " >请选择你的模板</h3>
+	                    <h3 class="heading-title" >请选择你的模板</h3>
 	                </div>
             	</div>
 	            
@@ -50,11 +50,11 @@
  <div class="row prev-div" style="visibility: hidden;" id="preview">
                     <div class="col-xs-5 chooseimg">
                         <label class="btn btn-r" for="inputImage" title="选择图片" accept=".jpg,.jpeg,.png,.gif,.bmp,.tiff">
-                            <input type="file" id="inputImage" class="hidden js-uploadfile" />
+                            <input onclick="transclass()" type="file" id="inputImage" class="hidden js-uploadfile" />
                             <span>选择图片</span>
                         </label>
                         <br />
-                        <button type="button" id="generateImage" class="btn btn-r disabled js-ok">生成头像</button>
+                        <button type="button" id="generateImage" class="btn btn-r js-ok">生成头像</button>
                     </div>
         
                     <div class="img-group col-xs-7" >
@@ -79,13 +79,17 @@
 	<div class="bottom-image">
 		<img src="img/foot.png" alt="" >
 	</div>
+	
 	<div class="footer-div">
-	    <p class="footer">2017 © Powered by HUSTSU & 电信学院科协技术部  All rights reserved.</p>
+	    <p class="footer">2017 © Powered by HUSTSU && 电信学院科协技术部</p>
 	</div>
+
+
+	<!-- js -->
+	
 	<script src="js/jquery-1.10.1.min.js"></script>
     <script src="js/cropper.min.js"></script>
     <script src="js/cropper.smallScreen.js"></script>
 	<script type="text/javascript" src="http://libs.baidu.com/jquery/1.9.1/jquery.js"></script>
-	
 </body>
 </html>
